--- a/static/style.css
+++ b/static/style.css
@@ -1,20 +1,113 @@
-body            { font-family: sans-serif; background: #eee; }
-a, h1, h2       { color: #377ba8; }
-h1, h2          { margin: 0; }
-h1              { border-bottom: 2px solid #eee; }
-h2              { font-size: 1.2em; }
+body {
+  font-family: sans-serif;
+  background: #eee;
+}
 
-.page           { margin: 2em auto; width: 35em; border: 5px solid #ccc;
-                  padding: 0.8em; background: white; }
-.entries        { list-style: none; margin: 0; padding: 0; }
-.entries li     { margin: 0.8em 1.2em; }
-.entries li h2  { margin-left: -1em; }
-.add-entry      { font-size: 0.9em; border-bottom: 1px solid #ccc; }
-.add-entry dl   { font-weight: bold; }
-.metanav        { text-align: right; font-size: 0.8em; padding: 0.3em;
-                  margin-bottom: 1em; background: #fafafa; }
-.flash          { background: #cee5F5; padding: 0.6em;
-                  margin: 2px;}
+a, h1, h2 {
+  color: #377ba8;
+}
 
-.message        { background: #6b5b95; padding: 0.4em; }
-.error          { background: #d64161; padding: 0.4em; }
+h1, h2 {
+  margin: 0;
+}
+
+h1 {
+  border-bottom: 2px solid #eee;
+}
+
+h2 {
+  font-size: 1.2em;
+}
+
+.page {
+  margin: 2em auto;
+  width: 35em;
+  border: 5px solid #ccc;
+  padding: 0.8em;
+  background: white;
+}
+
+.entries {
+  list-style: none;
+  margin: 0;
+  padding: 0;
+}
+
+.entries li {
+  margin: 0.8em 1.2em;
+}
+
+.entries li h2 {
+  margin-left: -1em;
+}
+
+.add-entry {
+  font-size: 0.9em;
+  border-bottom: 1px solid #ccc;
+}
+
+.add-entry dl {
+  font-weight: bold;
+}
+
+.metanav {
+  text-align: right;
+  font-size: 0.8em;
+  padding: 0.3em;
+  margin-bottom: 1em;
+  background: #fafafa;
+}
+
+.flash {
+  background: #cee5F5;
+  padding: 0.6em;
+  margin: 2px;
+}
+
+.message {
+  background: #377ba8;
+  padding: 0.4em;
+}
+
+.error {
+  background: #d64161;
+  padding: 0.4em;
+}
+
+button {
+  color: white;
+  padding: 6px 6px;
+  border: none;
+  cursor: pointer;
+  width: 100%;
+  margin: 2px;
+}
+
+.complete-btn {
+  width: auto;
+  background-color: #4CAF50;
+  float:right;
+
+}
+
+.delete-btn {
+  width: auto;
+  background-color: #f44336;
+  float:right;
+}
+
+.goal {
+  display: flex;
+  background-color: #d1d1d1;
+  padding: 4px;
+  margin: 6px;
+}
+
+.goal-text {
+  flex: 65%;
+  vertical-align: middle;
+}
+
+.goal-options {
+  flex: 35%;
+}
