--- a/static/style.css
+++ b/static/style.css
@@ -60,6 +60,7 @@ h2 {
 
 .flash {
   background: #cee5F5;
+  color: white;
   padding: 0.6em;
   margin: 2px;
 }
@@ -74,8 +75,10 @@ h2 {
   padding: 0.4em;
 }
 
-button {
+button, .button {
   color: white;
+  background-color: black;
+  text-decoration: none;
   padding: 6px 6px;
   border: none;
   cursor: pointer;
@@ -86,18 +89,18 @@ button {
 .complete-btn {
   width: auto;
   background-color: #4CAF50;
-  float:right;
-
+  float: right;
 }
 
 .delete-btn {
   width: auto;
   background-color: #f44336;
-  float:right;
+  float: right;
 }
 
 .goal {
   display: flex;
+  align-items: center;
   background-color: #d1d1d1;
   padding: 4px;
   margin: 6px;
@@ -106,6 +109,9 @@ button {
 .goal-text {
   flex: 65%;
   vertical-align: middle;
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
 }
 
 .goal-options {
