--- a/templates/layout.html
+++ b/templates/layout.html
@@ -4,18 +4,16 @@
 <div class=page>
   <h1>BucketList</h1>
   <div class=metanav>
-  {% if 'token' not in session %}
-    <a href="{{ url_for('login') }}">log in</a>
-  {% else %}
-    <a href="{{ url_for('logout') }}">log out</a>
-  {% endif %}
+    {% if 'token' in session %}
+      <a href="{{ url_for('logout') }}">Log Out</a>
+    {% endif %}
   </div>
   {% with messages = get_flashed_messages(with_categories=true) %}
-  {% if messages %}
-    {% for category, message in messages %}
-      <div class="flash {{ category }}">{{ message }}</div>
-    {% endfor %}
-  {% endif %}
-{% endwith %}
+    {% if messages %}
+      {% for category, message in messages %}
+        <div class="flash {{ category }}">{{ message }}</div>
+      {% endfor %}
+    {% endif %}
+  {% endwith %}
   {% block body %}{% endblock %}
 </div>
